--- a/verify-release-tag/action.yml
+++ b/verify-release-tag/action.yml
@@ -32,14 +32,18 @@ runs:
         ref: ${{ inputs.branch }}
         fetch-depth: 0
 
-    - name: Get tagged branch
-      id: get_tagged_branch
-      run: echo "::set-output name=value::$(git branch --contains ${{ steps.release-version.outputs.value }} | tail -1 | sed 's/^[ \t]*//;s/[ \t]*$//')"
+    - name: Get tagged branches
+      id: tagged_branches
+      run: echo "::set-output name=value::$(git branch --contains ${{ steps.release-version.outputs.value }} | sed 's/^[ \t\*]*//;s/[ \t]*$//' | jq -R . | jq -s ."
+      shell: bash
+      
+    - name: Print tagged branches
+      run: echo ${{ steps.tagged_branches.outputs.value }}
       shell: bash
 
-    - name: Fail if tagged branch is not ${{ inputs.branch }}
+    - name: Fail if ${{ inputs.branch }} does not contain the tag
       run: |
-        echo "Tagged branch ${{ steps.get_tagged_branch.outputs.value }} is not ${{ inputs.branch }} branch. Exit now!
+        echo "Branch ${{ inputs.branch }} does not contain tag ${{ steps.release-version.outputs.value }}. Exit now!
         exit -1
-      if: contains(fromJSON('["release-action", "* release-action"]'), steps.get_tagged_branch.outputs.value) == 'false'
+      if: contains(fromJSON(steps.tagged_branches.outputs.value), inputs.branch) == false
       shell: bash
