--- a/build-jar/action.yml
+++ b/build-jar/action.yml
@@ -13,12 +13,18 @@ inputs:
 outputs:
   should-bump-version:
     description: "Should bump new version to pom.xml"
-    value: ${{ steps.should_bump_version.outputs.value }}
+    value: ${{ steps.should-bump-version.outputs.value }}
+  file-path:
+    description: "Path to the jar file"
+    value: target/${{ steps.get-jar-file.outputs.name }}
+  file-name:
+    description: "jar file name"
+    value: ${{ steps.get-jar-file.outputs.name }}
 runs:
   using: 'composite'
   steps:
     - name: Install Atlas-SDK
-      id: install_atlas_sdk
+      id: install-atlas-sdk
       run: |
         sudo sh -c 'echo "deb https://packages.atlassian.com/debian/atlassian-sdk-deb/ stable contrib" >> /etc/apt/sources.list'
         wget https://packages.atlassian.com/api/gpg/key/public
@@ -35,21 +41,21 @@ runs:
         java-version: '8'
 
     - name: Get current version
-      id: get_current_version
+      id: current-version
       run: echo "::set-output name=value::$(atlas-mvn help:evaluate -Dexpression=project.version -q -DforceStdout | grep -v '\[' | tail -1)"
       shell: bash
 
     - name: Print current version
-      run: echo ${{ steps.get_current_version.outputs.value }}
+      run: echo ${{ steps.current-version.outputs.value }}
       shell: bash
 
     - name: Check if version changed
-      id: version_changed
-      run: echo "::set-output name=value::${{ inputs.release-version != steps.get_current_version.outputs.value }}"
+      id: version-changed
+      run: echo "::set-output name=value::${{ inputs.release-version != steps.current-version.outputs.value }}"
       shell: bash
 
     - name: Print version changed
-      run: echo ${{ steps.version_changed.outputs.value }}
+      run: echo ${{ steps.version-changed.outputs.value }}
       shell: bash
 
     - name: Checkout tag commit
@@ -65,60 +71,60 @@ runs:
       shell: bash
 
     - name: Get artifactId
-      id: get_artifact_id
+      id: get-artifact-id
       run: echo "::set-output name=value::$(atlas-mvn help:evaluate -Dexpression=project.artifactId -q -DforceStdout | grep -v '\[' | tail -1)"
       shell: bash
 
     - name: Get jar file name
-      id: get_jar_file
+      id: get-jar-file
       run: |
-        echo "::set-output name=name::${{ steps.get_artifact_id.outputs.value }}-${{ inputs.release-version }}.jar"
-        echo "::set-output name=archive::${{ steps.get_artifact_id.outputs.value }}-${{ inputs.release-version }}"
+        echo "::set-output name=name::${{ steps.get-artifact-id.outputs.value }}-${{ inputs.release-version }}.jar"
+        echo "::set-output name=archive::${{ steps.get-artifact-id.outputs.value }}-${{ inputs.release-version }}"
       shell: bash
 
     - name: Archive for download
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ steps.get_jar_file.outputs.archive }}
-        path: target/${{ steps.get_jar_file.outputs.name }}
+        name: ${{ steps.get-jar-file.outputs.archive }}
+        path: target/${{ steps.get-jar-file.outputs.name }}
 
     - name: Upload jar as asset to release
       uses: softprops/action-gh-release@v1
       with:
         token: ${{ inputs.githubToken }}
-        files: target/${{ steps.get_jar_file.outputs.name }}
+        files: target/${{ steps.get-jar-file.outputs.name }}
 
     - name: Checkout ${{ inputs.branch }} branch
       run: |
         git stash
         git checkout ${{ inputs.branch }}
-      if: steps.version_changed.outputs.value == 'true'
+      if: steps.version-changed.outputs.value == 'true'
       shell: bash
 
     - name: Get head tag
-      id: get_head_tag
+      id: get-head-tag
       run: echo "::set-output name=value::$(git tag --points-at HEAD || tail -1)"
-      if: steps.version_changed.outputs.value == 'true'
+      if: steps.version-changed.outputs.value == 'true'
       shell: bash
 
     - name: Print head tag
-      run: echo ${{ steps.get_head_tag.outputs.value }}
+      run: echo ${{ steps.get-head-tag.outputs.value }}
       shell: bash
 
     - name: Check if the new tag is at head
-      id: tag_at_head
-      run: echo "::set-output name=value::${{ inputs.release-version == steps.get_head_tag.outputs.value }}"
+      id: tag-at-head
+      run: echo "::set-output name=value::${{ inputs.release-version == steps.get-head-tag.outputs.value }}"
       shell: bash
 
     - name: Print is new tag at head
-      run: echo ${{ steps.tag_at_head.outputs.value }}
+      run: echo ${{ steps.tag-at-head.outputs.value }}
       shell: bash
 
     - name: Check if should bump version
-      id: should_bump_version
-      run: echo "::set-output name=value::${{ steps.version_changed.outputs.value == 'true' && steps.tag_at_head.outputs.value == 'true' }}"
+      id: should-bump-version
+      run: echo "::set-output name=value::${{ steps.version-changed.outputs.value == 'true' && steps.tag-at-head.outputs.value == 'true' }}"
       shell: bash
 
     - name: Print should bump version
-      run: echo ${{ steps.should_bump_version.outputs.value }}
+      run: echo ${{ steps.should-bump-version.outputs.value }}
       shell: bash
