--- a/setup-node/action.yml
+++ b/setup-node/action.yml
@@ -19,7 +19,7 @@ runs:
       shell: bash
 
     - name: Print is node project
-      run: echo ${{ steps.is-node-project.value }}
+      run: echo ${{ steps.is-node-project.outputs.value }}
       shell: bash
 
     - name: Extract npm and node version
@@ -27,22 +27,22 @@ runs:
       run: |
         echo ::set-output name=node::$(cat package.json | jq '.engines.node')
         echo ::set-output name=npm::$(cat package.json | jq '.engines.npm')
-      if: steps.is-node-project.value == 'true'
+      if: steps.is-node-project.outputs.value == 'true'
       shell: bash
 
     - name: Fails if the version of npm or node is missing
       run: |
         echo "Version of npm or node is missing"
         exit -1
-      if: (steps.engines.npm == '' || steps.engines.node == '') && steps.is-node-project.value == 'true'
+      if: (steps.engines.outputs.npm == '' || steps.engines.outputs.node == '') && steps.is-node-project.outputs.value == 'true'
       shell: bash
 
     - uses: actions/setup-node@v2
       with:
-        node-version: ${{ steps.engines.node }}
-      if: steps.is-node-project.value == 'true'
+        node-version: ${{ steps.engines.outputs.node }}
+      if: steps.is-node-project.outputs.value == 'true'
 
-    - name: Use npm version ${{ steps.engines.npm }}
-      run: npm install npm@${{ steps.engines.npm }}
-      if: steps.is-node-project.value == 'true'
+    - name: Use npm version ${{ steps.engines.outputs.npm }}
+      run: npm install npm@${{ steps.engines.outputs.npm }}
+      if: steps.is-node-project.outputs.value == 'true'
       shell: bash
