--- a/setup-node/action.yml
+++ b/setup-node/action.yml
@@ -34,7 +34,7 @@ runs:
       run: |
         echo "Version of npm or node is missing"
         exit -1
-      if: (steps.engines.outputs.npm == '' || steps.engines.outputs.node == '') && steps.is-node-project.outputs.value == 'true'
+      if: (steps.engines.outputs.npm == 'null' || steps.engines.outputs.node == 'null') && steps.is-node-project.outputs.value == 'true'
       shell: bash
 
     - uses: actions/setup-node@v2
