--- a/setup-node/action.yml
+++ b/setup-node/action.yml
@@ -25,8 +25,8 @@ runs:
     - name: Extract npm and node version
       id: engines
       run: |
-        echo ::set-output name=node::$(cat package.json | jq '.engines.node')
-        echo ::set-output name=npm::$(cat package.json | jq '.engines.npm')
+        echo ::set-output name=node::$(cat package.json | jq -r '.engines.node')
+        echo ::set-output name=npm::$(cat package.json | jq -r '.engines.npm')
       if: steps.is-node-project.outputs.value == 'true'
       shell: bash
 
