--- a/.github/workflows/acceptance-deploy.yml
+++ b/.github/workflows/acceptance-deploy.yml
@@ -4,7 +4,7 @@ concurrency:
   group: acceptance
 on:
   push:
-    branches: ["develop"]
+    branches: ["develop", "develop/*"]
 jobs:
   call-deploy:
     uses: ./.github/workflows/deploy.yml
